➕  Añadir FullCalendar a la página de torneos. Se actualizan package.json para incluir las dependencias de FullCalendar y se modifica el HTML y TypeScript de la página para integrar el calendario.

--- a/src/app/pages/tournaments/tournaments.page.html
+++ b/src/app/pages/tournaments/tournaments.page.html
@@ -8,7 +8,9 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-
+  <div class="flex justify-center">
+    <full-calendar [options]="calendarOptions"></full-calendar>
+  </div>
 
   <ul class="list">
   
