✨ Añadir funcionalidad de inicio de sesión en la aplicación "Peón Ladino". Se implementa un modal de inicio de sesión y se actualiza la lógica de autenticación en app.component.ts. Se ajusta la configuración de entorno para incluir claves de Firebase y se modifica el HTML para mostrar el título o el botón de inicio de sesión según el estado de autenticación.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,18 @@
 <ion-app>
 
     <ion-menu contentId="main-content" type="overlay">
+      <ion-header>
+        <ion-toolbar>
+          @if (isLoggedIn) {
+          <ion-title>Peón Ladino</ion-title>
+          } @else {
+            <ion-button (click)="presentModalLogin()" expand="block" fill="clear">
+              Login
+            </ion-button>
+          }
+        </ion-toolbar>
+      </ion-header>
       <ion-content>
-        
       </ion-content>
       <ion-footer class="ion-no-border">
         <ion-toolbar class="ion-text-center">
