🚧  Actualizar la configuración de la PWA . Se añade el archivo manifest.webmanifest y se configuran los encabezados en firebase.json. Se implementa la lógica para mostrar el botón de instalación de la PWA en app.component.html y se ajusta el archivo ngsw-config.json para incluir los iconos.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,6 +10,16 @@
               Login
             </ion-button>
           }
+          @if (showInstallButton) {
+            <ion-button 
+              slot="end" 
+              (click)="installPWA()" 
+              fill="clear" 
+              color="primary"
+              size="small">
+              📱 Instalar
+            </ion-button>
+          }
         </ion-toolbar>
       </ion-header>
       <ion-content>
